# FastAPI-payment-test

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4c60fde4836e_init.py
src/app/: main.py
src/app/api/: routers.py
src/app/api/v1/: admin.py  auth.py  payments.py  users.py
src/app/core/: base.py  config.py  constants.py  models.py  security.py  session.py
src/app/crud/: account.py  base.py  payment.py  user.py
src/app/models/: __init__.py  account.py  base.py  payment.py  user.py
src/app/schemas/: account.py  base.py  payment.py  token.py  user.py
src/app/services/: exceptions.py  payment.py  user.py
